welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:4: error: overloaded method value > with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Array[Int])
		if (nums(i) > max) max = nums(i)
                            ^maxValue:4: error: type mismatch;
 found   : Int
 required: Array[Int]
		if (nums(i) > max) max = nums(i)
                                             ^maxValue:6: error: type mismatch;
 found   : Array[Int]
 required: Int
	return max
               ^