welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var max = Array(0)
	for (i <- 1 to nums.length - 1) {
		if (nums(i) > max) max = nums(i)
	}
	return max
}
